# UltraFastBERT

./: flake.nix  pyproject.toml
